@@ -35,6 +35,7 @@ public class DragAndDrop {
 	Source dragSource;
 	Payload payload;
 	Actor dragActor;
+	boolean removeDragActor;
 	Target target;
 	boolean isValidTarget;
 	final Array<Target> targets = new Array();
@@ -78,17 +79,24 @@ public class DragAndDrop {
 
 				Stage stage = event.getStage();
 
-				if (dragActor != null) {
-					dragActor.remove(); // Remove so it cannot be hit (Touchable.disabled isn't enough).
-					dragActor = null;
+				// Move the drag actor away, so it cannot be hit.
+				Actor oldDragActor = dragActor;
+				float oldDragActorX = 0, oldDragActorY = 0;
+				if (oldDragActor != null) {
+					oldDragActorX = oldDragActor.getX();
+					oldDragActorY = oldDragActor.getY();
+					oldDragActor.setPosition(Integer.MAX_VALUE, Integer.MAX_VALUE);
 				}
+
+				float stageX = event.getStageX() + touchOffsetX, stageY = event.getStageY() + touchOffsetY;
+				Actor hit = event.getStage().hit(stageX, stageY, true); // Prefer touchable actors.
+				if (hit == null) hit = event.getStage().hit(stageX, stageY, false);
+
+				if (oldDragActor != null) oldDragActor.setPosition(oldDragActorX, oldDragActorY);
 
 				// Find target.
 				Target newTarget = null;
 				isValidTarget = false;
-				float stageX = event.getStageX() + touchOffsetX, stageY = event.getStageY() + touchOffsetY;
-				Actor hit = event.getStage().hit(stageX, stageY, true); // Prefer touchable actors.
-				if (hit == null) hit = event.getStage().hit(stageX, stageY, false);
 				if (hit != null) {
 					for (int i = 0, n = targets.size; i < n; i++) {
 						Target target = targets.get(i);
@@ -98,21 +106,29 @@ public class DragAndDrop {
 						break;
 					}
 				}
+
 				// If over a new target, notify the former target that it's being left behind.
 				if (newTarget != target) {
 					if (target != null) target.reset(source, payload);
 					target = newTarget;
 				}
+
 				// Notify new target of drag.
 				if (newTarget != null) isValidTarget = newTarget.drag(source, payload, tmpVector.x, tmpVector.y, pointer);
 
-				// Add and position the drag actor.
+				// Determine the drag actor, remove the old one if it was added by DragAndDrop, and add the new one.
 				Actor actor = null;
 				if (target != null) actor = isValidTarget ? payload.validDragActor : payload.invalidDragActor;
 				if (actor == null) actor = payload.dragActor;
-				dragActor = actor;
+				if (actor != oldDragActor) {
+					if (oldDragActor != null && removeDragActor) oldDragActor.remove();
+					dragActor = actor;
+					removeDragActor = actor.getStage() == null; // Only remove later if not already in the stage now.
+					if (removeDragActor) stage.addActor(actor);
+				}
 				if (actor == null) return;
-				stage.addActor(actor);
+
+				// Position the drag actor.
 				float actorX = event.getStageX() - actor.getWidth() + dragActorX;
 				float actorY = event.getStageY() + dragActorY;
 				if (keepWithinStage) {
@@ -130,7 +146,7 @@ public class DragAndDrop {
 				if (payload == null) return;
 
 				if (System.currentTimeMillis() < dragValidTime) isValidTarget = false;
-				if (dragActor != null) dragActor.remove();
+				if (dragActor != null && removeDragActor) dragActor.remove();
 				if (isValidTarget) {
 					float stageX = event.getStageX() + touchOffsetX, stageY = event.getStageY() + touchOffsetY;
 					target.actor.stageToLocalCoordinates(tmpVector.set(stageX, stageY));
@@ -272,8 +288,7 @@ public class DragAndDrop {
 		/** Called when a drag for the source is stopped. The coordinates are in the source's local coordinate system.
 		 * @param payload null if dragStart returned null.
 		 * @param target null if not dropped on a valid target. */
-		public void dragStop (InputEvent event, float x, float y, int pointer,
-							  @Null Payload payload, @Null Target target) {
+		public void dragStop (InputEvent event, float x, float y, int pointer, @Null Payload payload, @Null Target target) {
 		}
 
 		public Actor getActor () {
@@ -313,8 +328,8 @@ public class DragAndDrop {
 	}
 
 	/** The payload of a drag and drop operation. Actors can be optionally provided to follow the cursor and change when over a
-	 * target. Such Actors will be added and removed from the stage automatically during the drag operation. Care should be taken
-	 * when using the source Actor as a payload drag actor. */
+	 * target. Such actors will be added the stage automatically during the drag operation as necessary and they will only be
+	 * removed from the stage if they were added automatically. A source actor can be used a payload drag actor. */
 	static public class Payload {
 		@Null Actor dragActor, validDragActor, invalidDragActor;
 		@Null Object object;
