@@ -33,15 +33,15 @@ public class LwjglDebugStarter {
 //		new SharedLibraryLoader("../../extensions/gdx-controllers/gdx-controllers-desktop/libs/gdx-controllers-desktop-natives.jar").load("gdx-controllers-desktop");
 //		new SharedLibraryLoader("../../gdx/libs/gdx-natives.jar").load("gdx");
 
-		GdxTest test = new CollectionsTest();
+		GdxTest test = new DragAndDropTest();
 		LwjglApplicationConfiguration config = new LwjglApplicationConfiguration();
 		config.r = config.g = config.b = config.a = 8;
 //		config.width = 320;
 //		config.height = 241;
 		config.width = 960;
 		config.height = 600;
-		config.width = 1920;
-		config.height = 1080;
+//		config.width = 1920;
+//		config.height = 1080;
 //		config.setFromDisplayMode(LwjglApplicationConfiguration.getDesktopDisplayMode());
 		new LwjglApplication(test, config);
 	}
